--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/dog/happy.png
+    - assets/cat/happy.png
+    - assets/dog/sad.png
+    - assets/cat/sad.png
+    - assets/dog/dead.png
+    - assets/cat/dead.png
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
