--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  path_provider: ^2.0.9
+  fast_immutable_collections: ^7.3.1
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +67,6 @@ flutter:
     - assets/cat/sad.png
     - assets/dog/dead.png
     - assets/cat/dead.png
-    # - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
